# lazypp

./: .travis.yml  CMakeLists.txt  GetCompilerVersion.cmake  Makefile  README.md
include/: lazypp.hpp  lazypp_test.hpp
tests/: CMakeLists.txt  Makefile  test_map.cpp  tests.cpp
